# oneshot_alliance_manager

./: .gitignore  CLAUDE.md  docker-compose.yml  mockup-supanova.html
.claude/: settings.local.json
.cwm/: config.yml
.cwm/dev-manual/chapters/: 01-project-overview.md  02-coding-standards.md  03-architecture.md  04-error-handling.md  05-security.md  06-testing.md
.cwm/docs/logs/: change-log.md
.cwm/state/: edit-tracker
backend/: .gitignore  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 199ed134abba_add_admin_alliance_event_tables.py  27bcc5a1bdf3_add_thumbnail_url_to_events.py  5fde9011f622_score_bigint.py  a1b2c3d4e5f6_add_performance_indexes.py  a1b2c3d4e5f6_redesign_members_table.py  b8c7d6e5f4a3_add_performance_indexes.py  c4d9e1b72a8f_event_occurrences_and_participation_fk.py  cc4624e93643_create_members_and_snapshots_tables.py  e2a3b4c5d6e7_remove_frequency_add_common_timestamps.py  f3a2b1c0d9e8_add_alliance_id_to_event_occurrences.py  fe8d2c1a4b5e_add_alliance_member_rank.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  public.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/models/: __init__.py  alliance.py  alliance_member.py  base.py  event.py  event_occurrence.py  event_participation.py  member.py
backend/app/schemas/: admin.py  auth.py
backend/app/services/: admin_service.py  auth_service.py  kingshot_service.py  screenshot_service.py
backend/tests/: conftest.py
frontend/src/lib/: api.ts  (+7 more)
(+48 files in other folders)
